syntax = "proto3";

package test.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "listify/query/v1/page.proto";
import "psm/v1/annotations.proto";

option go_package = "github.com/pentops/protostate/testproto/gen/testpb";

// FooService is an idealistic, everything-is-normal state machine, which will
// take advantage of all defaults when constructing the state query and state
// machine
service FooService {
  option (psm.v1.state_query).name = "foo";

  rpc GetFoo(GetFooRequest) returns (GetFooResponse) {
    option (google.api.http) = {get: "/test/v1/foo/{foo_id}"};
    option (psm.v1.state_query_method).get = true;
  }

  rpc ListFoos(ListFoosRequest) returns (ListFoosResponse) {
    option (google.api.http) = {get: "/test/v1/foos"};
    option (psm.v1.state_query_method).list = true;
  }

  rpc ListFooEvents(ListFooEventsRequest) returns (ListFooEventsResponse) {
    option (google.api.http) = {get: "/test/v1/foo/{foo_id}/events"};
    option (psm.v1.state_query_method).list_events = true;
  }
}

message GetFooRequest {
  string foo_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetFooResponse {
  FooState state = 1;
  repeated FooEvent events = 2;
}

message FooState {
  option (psm.v1.state).name = "foo";

  string foo_id = 1 [(buf.validate.field).string.uuid = true];
  optional string tenant_id = 2 [(buf.validate.field).string.uuid = true];

  string name = 3;
  string field = 4;

  string last_event_id = 6;

  FooStatus status = 5;
}

enum FooStatus {
  FOO_STATUS_UNSPECIFIED = 0;
  FOO_STATUS_ACTIVE = 1;
  FOO_STATUS_DELETED = 2;
}

message FooEvent {
  option (psm.v1.event).name = "foo";

  Metadata metadata = 1 [
    (psm.v1.event_field).metadata = true,
    (buf.validate.field).required = true
  ];

  string foo_id = 2 [
    (psm.v1.event_field).state_key = true,
    (buf.validate.field).string.uuid = true
  ];

  optional string tenant_id = 4 [
    (psm.v1.event_field).state_field = true,
    (buf.validate.field).string.uuid = true
  ];

  FooEventType event = 3 [
    (psm.v1.event_field).event_type = true,
    (buf.validate.field).required = true
  ];
}

message Metadata {
  string event_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  Actor actor = 3;
}

message Actor {
  string actor_id = 1;
}

message FooEventType {
  oneof type {
    Created created = 1;
    Updated updated = 2;
    Deleted deleted = 3;
  }

  message Created {
    string name = 1;
    string field = 2;
  }

  message Updated {
    string name = 1;
    string field = 2;
  }

  message Deleted {}
}

message ListFoosRequest {
  optional string tenant_id = 1 [(buf.validate.field).string.uuid = true];
  listify.query.v1.PageRequest page = 2;
}

message ListFoosResponse {
  repeated FooState foos = 1;
  listify.query.v1.PageResponse page = 2;
}

message ListFooEventsRequest {
  string foo_id = 1 [(buf.validate.field).string.uuid = true];
  listify.query.v1.PageRequest page = 2;
}

message ListFooEventsResponse {
  repeated FooEvent events = 1;
  listify.query.v1.PageResponse page = 2;
}
